--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ provider:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
     IMAGE_ID_INDEX: ImageIdIndex
-    IMAGES_S3_BUCKET: serverless-udagram-images-${self:provider.stage}
+    IMAGES_S3_BUCKET: femi-serverless-udagram-images-${self:provider.stage}
 
   iamRoleStatements:
     - Effect: Allow
@@ -35,6 +35,11 @@ provider:
       Action:
         - dynamodb:Query
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*      
 
 custom:        
   documentation:
@@ -95,7 +100,10 @@ functions:
             summary: Create a new image
             description: Create a new image
             requestModels:
-              'application/json': ImageRequest               
+              'application/json': ImageRequest 
+                            
+  SendUploadNotifications:
+    handler: src/lambda/s3/sendNotifications.handler 
 
 resources:
   Resources:
@@ -149,6 +157,10 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+        NotificationConfiguration:
+          LambdaConfigurations:
+          - Event: s3:ObjectCreated:*
+            Function: !GetAtt SendUploadNotificationsLambdaFunction.Arn
         CorsConfiguration:
           CorsRules:
             -
@@ -164,16 +176,16 @@ resources:
                 - HEAD    
               MaxAge: 3000
 
-      BucketPolicy: 
-        Type: AWS::S3::BucketPolicy
-        Properties:
-          PolicyDocument:
-            Id: MyPolicy
-            Version: "2012-10-17"
-            statement:
-              - Sid: PublicReadForGetBucketObjects
-                Effect: Allow
-                Principal: '*'
-                Action: 's3:GetObject'
-                Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
-          Bucket: !Ref AttachmentsBucket  
+    BucketPolicy: 
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: MyPolicy
+          Version: "2012-10-17"
+          statement:
+            - Sid: PublicReadForGetBucketObjects
+              Effect: Allow
+              Principal: '*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
+        Bucket: !Ref AttachmentsBucket  
