--- a/serverless.yml
+++ b/serverless.yml
@@ -131,6 +131,10 @@ functions:
 
   SyncWithElasticSearch:
     handler: src/lamda/dyanamoDb/elasticSearchSync.handler            
+    events:
+      - stream:
+          type: dynamodb
+          arn: !GetAtt ImaggesDynamoDBTable.streamArn
 
 resources:
   Resources:
@@ -213,6 +217,31 @@ resources:
         Action: lambda:InvokeFunction
         SourceAccount: !Ref AWS::AccountId
         SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
+
+    ImagesSearch:
+      Type: AWS::Elasticsearch::Domain
+      Properties:
+        ElasticsearchVersion: '6.3'
+        DomainName: images-search-${self:provider.stage}
+        ElasticsearchClusterConfig:
+          DedicatedMasterEnabled: false
+          InstanceType: t2.small.elasticsearch
+        EBSOptions:
+          EBSEnabled: true
+          Iops: 0
+          VolumeSize: 10
+          VolumeType: 'gp2'
+
+        AccessPolicies:
+          Version: '2012-10-17'
+          Statement:
+            -
+              Effect: Allow
+              Principal:
+                AWS: '*'
+              Action: 'es:*'
+              Resource: '*'
+              
 
     BucketPolicy: 
       Type: AWS::S3::BucketPolicy
